--- a/templates/index.html
+++ b/templates/index.html
@@ -42,18 +42,22 @@
                     <button class="btn logout-btn logout-btn:hover" onclick="Logout()">Logout</button>
                 </div>
                 <div class="card-body">
-                    <form method="POST" id="my-form" enctype="multipart/form-data" >
-                       <label for="file"><span class="circle">1.</span> <h5>Upload csv data in a zip file. The uploaded zip file contains the train and test dataset in csv format and a readme file</h5></label>
-                        <input type="file" accept=".gz" style="margin-left: 45px;" id="file-uploader" name = "file" required>
-                        <p id="feedback" style="margin-left: 45px;"></p>
-                        <div class="p-t-15">
-                        {% if error %}
-                        <div class="alert alert-danger">{{ error }}</div>
-                        {% endif %}
-                            <div id="chart-container" style="display: none">
-                             <img id="myChart" src="/static/chart.png">
-                              </div>
-                        </div>
+                    <form method="POST" id="my-form" enctype="multipart/form-data">
+  <label for="file"><span class="circle">1.</span> <h5>Upload csv data in a zip file. The uploaded zip file contains the train and test dataset in csv format and a readme file</h5></label>
+  <div style="display: flex; align-items: center;">
+    <input type="file" accept=".gz" style="margin-left: 45px;" id="file-uploader" name="file" required>
+    <button id="show-statistics-button" disabled style="margin-left: 45px;">Show Statistics</button>
+  </div>
+  <p id="feedback" style="margin-left: 45px;"></p>
+  <div class="p-t-15">
+    {% if error %}
+      <div class="alert alert-danger">{{ error }}</div>
+    {% endif %}
+    <div id="chart-container" style="display: none">
+      <img id="myChart" src="/static/chart.png">
+    </div>
+    <div id="stats-container"></div>
+  </div>
                         <span class="circle">2.</span><div class="form-row m-b-55">
                             <div class="name">Define column numbers:</div>
                             <div class="value">
