--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -10,7 +10,9 @@
     <meta name="keywords" content="Colorlib Templates">
 
     <!-- Title Page-->
-    <title>Predict Unlabeled Data</title>
+    <title>PET APP</title>
+
+
 
     <!-- Icons font CSS-->
     <link href="static/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -33,29 +35,51 @@
             <div class="card card-5">
                 <div class="card-heading">
                     <div class="title">Predict Unlabeled Data</div>
-                    <button class="btn logout-btn logout-btn:hover" onclick="Logout()">Logout</button>
+                    <button class="btn logout-btn logout-btn:hover" onclick="Logout()">Logout <i class="fa fa-power-off"></i></button>
+                    <button class="btn home-btn home-btn:hover" onclick="Rerun()">START <i class="fa fa-home"></i></button>
                 </div>
                 <style>
-   .logout-btn {
-    display: flex;
-    float: right;
+
+   .card-heading {
+   position: relative;
+   }
+
+    .logout-btn {
+    position: absolute;
+    top: 0%;
+    transform: translateY(-50%, 50%);
+    right: 0;
     color: lightgrey;
-    line-height: 0px;
     align-items: center;
-    padding: 0px 25px;
+    padding: 15px 25px;
     }
 
     .logout-btn:hover {
     color: white;
     }
 
-#container {
-text-align: center;
-}
-#1container {
-text-align: start;
-}
-    		  .circle {
+    .home-btn {
+    position: absolute;
+    top: 0%;
+    transform: translateY(-50%, 50%);
+    left: 0;
+    color: lightgrey;
+    align-items: center;
+    padding: 15px 25px;
+    }
+
+    .home-btn:hover {
+    color: white;
+    }
+
+    #container {
+    text-align: center;
+    }
+    #1container {
+    text-align: start;
+    }
+
+    .circle {
         float: left;
         display: inline-block;
         width: 35px;
@@ -68,7 +92,7 @@ text-align: start;
         font-size: 1.5em;
         color: #555;
         fill: none;
-  }
+    }
 </style>
                         <div class="form-row m-b-55">
                             <div class="value">
@@ -112,11 +136,18 @@ const observer = new MutationObserver(function(mutationsList) {
 observer.observe(feedbackDiv, { childList: true });
 
 
-                    function Logout() {
-        fetch('/logout').then(response => {
-            window.location.href = '/login';
-        });
-    }
+                function Logout() {
+                    fetch('/logout').then(response => {
+                    window.location.href = '/login?logout=True';
+                    });
+                }
+
+                function Rerun() {
+                    fetch('/clean').then(response => {
+                    window.location.href = '/basic';
+                    });
+                }
+
 
                     document.getElementById("file").addEventListener("change", function() {
     var file = this.files[0];
