--- a/templates/index.html
+++ b/templates/index.html
@@ -52,21 +52,39 @@
         fill: none;
   }
 
-   .logout-btn {
-    display: flex;
-    float: right;
+.card-heading {
+    position: relative;
+}
+
+    .logout-btn {
+    position: absolute;
+    top: 0%;
+    transform: translateY(-50%, 50%);
+    right: 0;
     color: lightgrey;
-    line-height: 0px;
     align-items: center;
-    padding: 0px 25px;
+    padding: 15px 25px;
     }
 
     .logout-btn:hover {
     color: white;
     }
+
+    .home-btn {
+    position: absolute;
+    top: 0%;
+    transform: translateY(-50%, 50%);
+    left: 0;
+    color: lightgrey;
+    align-items: center;
+    padding: 15px 25px;
+    }
+
+    .home-btn:hover {
+    color: white;
+    }
+
 </style>
-
-
 
 <body>
     <div class="page-wrapper bg-gra-03 p-t-45 p-b-50">
@@ -74,7 +92,21 @@
             <div class="card card-5">
                 <div class="card-heading">
                     <div class="title">PET APP</div>
-                    <button class="btn logout-btn logout-btn:hover" onclick="Logout()">Logout</button>
+                    <button class="btn logout-btn logout-btn:hover" onclick="Logout()">Logout <i class="fa fa-power-off"></i></button>
+                    <button class="btn home-btn home-btn:hover" onclick="Rerun()">START <i class="fa fa-home"></i></button>
+                    <script>
+                    function Logout() {
+                        fetch('/logout').then(response => {
+                        window.location.href = '/login?logout=True';
+                        });
+                    }
+
+                    function Rerun() {
+                        fetch('/clean').then(response => {
+                        window.location.href = '/basic';
+                        });
+                    }
+                    </script>
                 </div>
                 <div class="card-body">
                     <form method="POST" id="my-form" enctype="multipart/form-data" >
