Fix Bugs not being able to add input field in first page by moving these part of code into new js file

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <!-- Required meta tags-->
@@ -154,6 +154,8 @@
     <script>
       addEventListenersForIndex();
     </script>
+    <script src="/static/js/script_add_input.js"></script>
+
 
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
