--- a/templates/index.html
+++ b/templates/index.html
@@ -32,66 +32,13 @@
     <link href="/static/css/main.css" rel="stylesheet" media="all">
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
-<style>
-
-    		  .circle {
-        float: left;
-        margin-bottom: 10px;
-        margin-right: 10px;
-        display: inline-block;
-        width: 35px;
-        height: 35px;
-        border-radius: 50%;
-        border: 2px dotted #2c6ed5;
-        background-color: transparent;
-        text-align: center;
-        font-family: "sans";
-        font-size: 1.5em;
-        color: #555;
-        fill: none;
-  }
-
-.card-heading {
-    position: relative;
-}
-
-    .logout-btn {
-    position: absolute;
-    top: 0%;
-    transform: translateY(-50%, 50%);
-    right: 0;
-    color: lightgrey;
-    align-items: center;
-    padding: 15px 25px;
-    }
-
-    .logout-btn:hover {
-    color: white;
-    }
-
-    .home-btn {
-    position: absolute;
-    top: 0%;
-    transform: translateY(-50%, 50%);
-    left: 0;
-    color: lightgrey;
-    align-items: center;
-    padding: 15px 25px;
-    }
-
-    .home-btn:hover {
-    color: white;
-    }
-
-</style>
-
 <body>
     <div class="page-wrapper bg-gra-03 p-t-45 p-b-50">
         <div class="wrapper wrapper--w790">
             <div class="card card-5">
                 <div class="card-heading">
                     <div class="title">PET APP</div>
-                    <button class="btn logout-btn logout-btn:hover" onclick="Logout()">Logout <i class="fa fa-power-off"></i></button>
+                    <button class="btn logout-btn logout-btn:hover" onclick="Logout()">LOGOUT <i class="fa fa-power-off"></i></button>
                     <button class="btn home-btn home-btn:hover" onclick="Rerun()">START <i class="fa fa-home"></i></button>
                     <script>
                     function Logout() {
