--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -36,7 +36,7 @@
                 <div class="card-heading">
                     <div class="title">Predict Unlabeled Data</div>
                     <button class="btn logout-btn logout-btn:hover" onclick="Logout()">LOGOUT <i class="fa fa-power-off"></i></button>
-                    <button class="btn home-btn home-btn:hover" onclick="Rerun()">START <i class="fa fa-home"></i></button>
+                    <button class="btn home-btn home-btn:hover" onclick="runPythonCode()">START <i class="fa fa-home"></i></button>
                 </div>
 
                         <div class="form-row m-b-55">
